@@ -71,6 +71,8 @@ describe 'Character(1015990)' do
     @char.gender.should.equal 'Female'
     @char.race.should.equal "Miqo'te"
     @char.clan.should.equal 'Seeker of the Sun'
+    @char.portrait_url.should.equal 'http://static.finalfantasyxiv.com/csnap/v05m_m_7bd793d507a92d2c415b306a83280d19.png'
+    @char.portrait_thumb_url.should.equal 'http://static.finalfantasyxiv.com/csnap/v05m_ss_7bd793d507a92d2c415b306a83280d19.png'
   end
 
   it 'should have stat lists' do
@@ -96,7 +98,7 @@ describe 'Character(1015990)' do
 
   it 'should be convertable to json' do
     json = <<LOLHEREDOC
-{"first_name":"Lady","character_id":1015990,"nameday":"4th Sun of the 3rd Umbral Moon","world":"Selbina","last_name":"Simmons","attributes":{"vitality":24,"dexterity":17,"intelligence":36,"mind":37,"piety":28,"strength":16},"guardian":"Nymeia, the Spinner","current_exp":18880,"starting_city":"Gridania","exp_to_next_level":28000,"race":"Miqo'te","resistances":{"fire":28,"water":29,"lightning":30,"wind":30,"earth":25,"ice":15},"physical_level":12,"jobs":{"armorer":{"skill_name":"Armorcraft","rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Armorer"},"miner":{"skill_name":"Mining","rank":1,"current_skill_points":431,"skillpoint_to_next_level":570,"name":"Miner"},"lancer":{"skill_name":"Polearm","rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Lancer"},"goldsmith":{"skill_name":"Goldsmithing","rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Goldsmith"},"botanist":{"skill_name":"Botany","rank":9,"current_skill_points":1800,"skillpoint_to_next_level":4300,"name":"Botanist"},"thaumaturge":{"skill_name":"Thaumaturgy","rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Thaumaturge"},"leatherworker":{"skill_name":"Leatherworking","rank":1,"current_skill_points":78,"skillpoint_to_next_level":570,"name":"Leatherworker"},"pugilist":{"skill_name":"Hand-to-Hand","rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Pugilist"},"fisher":{"skill_name":"Fishing","rank":3,"current_skill_points":748,"skillpoint_to_next_level":880,"name":"Fisher"},"conjurer":{"skill_name":"Conjury","rank":1,"current_skill_points":272,"skillpoint_to_next_level":570,"name":"Conjurer"},"weaver":{"skill_name":"Clothcraft","rank":6,"current_skill_points":1145,"skillpoint_to_next_level":1800,"name":"Weaver"},"shield":{"skill_name":"Shield","rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Shield"},"gladiator":{"skill_name":"Sword","rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Gladiator"},"carpenter":{"skill_name":"Woodworking","rank":5,"current_skill_points":305,"skillpoint_to_next_level":1500,"name":"Carpenter"},"alchemist":{"skill_name":"Alchemy","rank":8,"current_skill_points":1753,"skillpoint_to_next_level":3200,"name":"Alchemist"},"marauder":{"skill_name":"Axe","rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Marauder"},"blacksmith":{"skill_name":"Smithing","rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Blacksmith"},"culinarian":{"skill_name":"Cooking","rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Culinarian"},"archer":{"skill_name":"Archery","rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Archer"}},"gender":"Female","clan":"Seeker of the Sun"}
+{"world":"Selbina","clan":"Seeker of the Sun","first_name":"Lady","portrait_url":"http:\/\/static.finalfantasyxiv.com\/csnap\/v05m_m_7bd793d507a92d2c415b306a83280d19.png","character_id":1015990,"current_exp":18880,"last_name":"Simmons","nameday":"4th Sun of the 3rd Umbral Moon","exp_to_next_level":28000,"portrait_thumb_url":"http:\/\/static.finalfantasyxiv.com\/csnap\/v05m_ss_7bd793d507a92d2c415b306a83280d19.png","guardian":"Nymeia, the Spinner","physical_level":12,"jobs":{"alchemist":{"rank":8,"current_skill_points":1753,"skillpoint_to_next_level":3200,"name":"Alchemist","skill_name":"Alchemy"},"marauder":{"rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Marauder","skill_name":"Axe"},"blacksmith":{"rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Blacksmith","skill_name":"Smithing"},"culinarian":{"rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Culinarian","skill_name":"Cooking"},"archer":{"rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Archer","skill_name":"Archery"},"armorer":{"rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Armorer","skill_name":"Armorcraft"},"miner":{"rank":1,"current_skill_points":431,"skillpoint_to_next_level":570,"name":"Miner","skill_name":"Mining"},"lancer":{"rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Lancer","skill_name":"Polearm"},"goldsmith":{"rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Goldsmith","skill_name":"Goldsmithing"},"botanist":{"rank":9,"current_skill_points":1800,"skillpoint_to_next_level":4300,"name":"Botanist","skill_name":"Botany"},"thaumaturge":{"rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Thaumaturge","skill_name":"Thaumaturgy"},"leatherworker":{"rank":1,"current_skill_points":78,"skillpoint_to_next_level":570,"name":"Leatherworker","skill_name":"Leatherworking"},"pugilist":{"rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Pugilist","skill_name":"Hand-to-Hand"},"fisher":{"rank":3,"current_skill_points":748,"skillpoint_to_next_level":880,"name":"Fisher","skill_name":"Fishing"},"conjurer":{"rank":1,"current_skill_points":272,"skillpoint_to_next_level":570,"name":"Conjurer","skill_name":"Conjury"},"weaver":{"rank":6,"current_skill_points":1145,"skillpoint_to_next_level":1800,"name":"Weaver","skill_name":"Clothcraft"},"gladiator":{"rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Gladiator","skill_name":"Sword"},"carpenter":{"rank":5,"current_skill_points":305,"skillpoint_to_next_level":1500,"name":"Carpenter","skill_name":"Woodworking"},"shield":{"rank":0,"current_skill_points":0,"skillpoint_to_next_level":0,"name":"Shield","skill_name":"Shield"}},"race":"Miqo'te","resistances":{"earth":25,"ice":15,"fire":28,"water":29,"lightning":30,"wind":30},"starting_city":"Gridania","attributes":{"mind":37,"piety":28,"strength":16,"vitality":24,"dexterity":17,"intelligence":36},"gender":"Female"}
 LOLHEREDOC
 
     JSON.parse(@char.to_json).should.equal JSON.parse(json)
